{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 30,
  "lineage": "2184022e-946a-2570-e6a7-e669a9008bdc",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "webinterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.compute_module",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/networkInterfaces/db-interface",
            "internal_domain_name_suffix": "zl0zwm1ouv2e3deltzz5ybmoxc.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/db-subnet"
              }
            ],
            "location": "northeurope",
            "name": "db-interface",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "staging-grp"
          },
          "dependencies": [
            "module.compute_module.azurerm_public_ip.ip",
            "module.networking_module.azurerm_bastion_host.appbastion",
            "module.networking_module.azurerm_network_security_group.nsg",
            "module.networking_module.azurerm_network_security_rule.nsgrules",
            "module.networking_module.azurerm_public_ip.bastionip",
            "module.networking_module.azurerm_subnet.bastionsubnet",
            "module.networking_module.azurerm_subnet.subnets",
            "module.networking_module.azurerm_subnet_network_security_group_association.nsg-link",
            "module.networking_module.azurerm_virtual_network.network",
            "module.networking_module.module.general_module.azurerm_resource_group.resourcegrp"
          ]
        }
      ]
    },
    {
      "module": "module.compute_module",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "db-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "northeurope",
            "name": "db-nsg",
            "resource_group_name": "staging-grp",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.azurerm_virtual_network.network",
            "module.networking_module.module.general_module.azurerm_resource_group.resourcegrp"
          ]
        },
        {
          "index_key": "web-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "northeurope",
            "name": "web-nsg",
            "resource_group_name": "staging-grp",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.azurerm_virtual_network.network",
            "module.networking_module.module.general_module.azurerm_resource_group.resourcegrp"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgrules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/Allow-3389",
            "name": "Allow-3389",
            "network_security_group_name": "web-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "staging-grp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.azurerm_network_security_group.nsg",
            "module.networking_module.azurerm_virtual_network.network",
            "module.networking_module.module.general_module.azurerm_resource_group.resourcegrp"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/Allow-80",
            "name": "Allow-80",
            "network_security_group_name": "web-nsg",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "staging-grp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.azurerm_network_security_group.nsg",
            "module.networking_module.azurerm_virtual_network.network",
            "module.networking_module.module.general_module.azurerm_resource_group.resourcegrp"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8172",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/Allow-8172",
            "name": "Allow-8172",
            "network_security_group_name": "web-nsg",
            "priority": 400,
            "protocol": "Tcp",
            "resource_group_name": "staging-grp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.azurerm_network_security_group.nsg",
            "module.networking_module.azurerm_virtual_network.network",
            "module.networking_module.module.general_module.azurerm_resource_group.resourcegrp"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/db-nsg/securityRules/Allow-3389",
            "name": "Allow-3389",
            "network_security_group_name": "db-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "staging-grp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.azurerm_network_security_group.nsg",
            "module.networking_module.azurerm_virtual_network.network",
            "module.networking_module.module.general_module.azurerm_resource_group.resourcegrp"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastionip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/publicIPAddresses/bastion-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.234.112.183",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "bastion-ip",
            "resource_group_name": "staging-grp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.networking_module.module.general_module.azurerm_resource_group.resourcegrp"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.10.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "staging-grp",
            "virtual_network_name": "staging-network"
          },
          "dependencies": [
            "module.networking_module.azurerm_virtual_network.network",
            "module.networking_module.module.general_module.azurerm_resource_group.resourcegrp"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "db-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "staging-grp",
            "virtual_network_name": "staging-network"
          },
          "dependencies": [
            "module.networking_module.azurerm_virtual_network.network",
            "module.networking_module.module.general_module.azurerm_resource_group.resourcegrp"
          ]
        },
        {
          "index_key": "web-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "staging-grp",
            "virtual_network_name": "staging-network"
          },
          "dependencies": [
            "module.networking_module.azurerm_virtual_network.network",
            "module.networking_module.module.general_module.azurerm_resource_group.resourcegrp"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-link",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "db-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/db-subnet"
          },
          "dependencies": [
            "module.networking_module.azurerm_network_security_group.nsg",
            "module.networking_module.azurerm_subnet.subnets",
            "module.networking_module.azurerm_virtual_network.network",
            "module.networking_module.module.general_module.azurerm_resource_group.resourcegrp"
          ]
        },
        {
          "index_key": "web-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/web-subnet"
          },
          "dependencies": [
            "module.networking_module.azurerm_network_security_group.nsg",
            "module.networking_module.azurerm_subnet.subnets",
            "module.networking_module.azurerm_virtual_network.network",
            "module.networking_module.module.general_module.azurerm_resource_group.resourcegrp"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "339bf5ca-a56e-4e78-8c8b-9e73fc058eba",
            "id": "/subscriptions/1ed2ad0b-f27c-450a-b603-d1a5da681ba2/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network",
            "location": "northeurope",
            "name": "staging-network",
            "resource_group_name": "staging-grp"
          },
          "dependencies": [
            "module.networking_module.module.general_module.azurerm_resource_group.resourcegrp"
          ]
        }
      ]
    }
  ]
}